# gpu-groth16-prover-3x

./: CMakeLists.txt  README.md  build.sh  caml_cuda_prover.cpp  cuda_prover_piecewise.cu  cuda_prover_piecewise.hpp  dune  groth16_gpu_prover.install  groth16_gpu_prover.ml  groth16_gpu_prover.opam  test.ml
libsnark/: CMakeLists.txt  generate_parameters.cpp  main.cpp  prover_reference_functions.cpp
libsnark/prover_reference_include/: prover_reference_libsnark.hpp
